Fixed z-index

--- a/client/app/mobile-nav/mobile-nav.css
+++ b/client/app/mobile-nav/mobile-nav.css
@@ -21,6 +21,7 @@
   height: 100vh;
   left:100%;
   opacity:0;
+  z-index: 999;
 }
 #grid-bg div div div span{
   color: white;
